--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,19 @@
-adium-theme-ubuntu==0.3.4
-beautifulsoup4==4.4.1
-certifi==2018.4.16
-cffi==1.11.5
-chardet==2.3.0
-Cheetah==2.4.4
-enum34==1.1.6
-gyp==0.1
-html5lib==0.999
-idna==2.6
-ipaddress==1.0.22
-libvirt-python==1.3.1
-lxml==3.5.0
-pyasn1==0.4.2
-pycparser==2.18
-pycurl==7.43.0
-python-apt==1.1.0b1+ubuntu0.16.4.1
-six==1.10.0
-unity-lens-photos==1.0
-virtualenv==15.2.0
-virtualenv-clone==0.3.0
+backcall==0.1.0
+decorator==4.3.0
+ipython==6.4.0
+ipython-genutils==0.2.0
+jedi==0.12.0
+parso==0.2.1
+pexpect==4.6.0
+pickleshare==0.7.4
+Pillow==5.1.0
+pkg-resources==0.0.0
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+Pygments==2.2.0
+PyQt5==5.10.1
+simplegeneric==0.8.1
+sip==4.19.8
+six==1.11.0
+traitlets==4.3.2
+wcwidth==0.1.7
